# hodu

./: .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.local  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: architecture_decision_record.md  bug_fix_template.md  document_template.md  (+2 more)
hodu-core/: Cargo.toml
hodu-server/: Cargo.toml
hodu-server/src/: api.rs  main.rs
hodu-server/src/api/: error.rs  judge.rs
hodu-server/src/api/judge/: error.rs  schema.rs  view.rs
hodu-server/src/api/ping/: view.rs
hodu-server/src/api/queue/: redis.rs
hodu-server/tests/bruno/: [c++] stars.bru  [c] increment.bru  [c] stars.bru  [java] single print.bru  [javascript] single print.bru  [python] single print.bru  bruno.json
hodu-server/tests/bruno/compile-errors/: [c] no semicolon.bru
hodu-server/tests/bruno/environments/: dev.bru  local.bru
hodu-server/tests/bruno/hacks/: [c] memory limit - very large array.bru  [c] run shell - shutdown.bru  [node] get another user code.bru  [node] run shell - try to get structure.bru
hodu-server/tests/bruno/requests/: [c++] stars.bru  [c] stars.bru  [java] single print.bru  [javascript] single print.bru  [python] single print.bru
hodu-server/tests/bruno/requests/compile-errors/: [c] no semicolon.bru
hodu-server/tests/bruno/requests/hacks/: [c] memory limit - very large array.bru  [c] run shell - shutdown.bru  [node] run shell - try to get structure.bru
hodu-server/tests/bruno/requests/limits/: [c] memory limit - very large array.bru  [c] time limit.bru
hodu-server/tests/bruno/requests/runtime-errors/: [javascript] null pointer exception.bru
hodu-server/tests/bruno/time-limits/: [node] exceed time limit.bru
judge-core/: Cargo.toml
judge-server/: Cargo.toml
src/: languages.rs  main.rs
waffle-judge-server/: Cargo.toml
(+41 files in other folders)
