[package]
name = "hodu-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hodu-core = { path = "../hodu-core" }

actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.63"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
